Media, Markets partial

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -382,26 +382,23 @@ Upcoming:
 
 ## Media
 
-{ notable community efforts }
-
-{ ratings news }
-
-{ hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
-
 Selected articles:
 
-- https://permabullnino.substack.com/p/thinking-out-loud-2-decred-charting
-- https://moneyweek.com/investments/alternative-finance/bitcoin-crypto/603213/decade-of-the-dao-decentralised-autonomous-organisation
-- Treasury vote also covered in Brave New Coin's news roundup: https://bravenewcoin.com/insights/crypto-market-forecast-week-of-may-3rd-2021 { is it notable? }
+- Big Tech on steroids: why the 2020s will be the "decade of the DAO" by [Dominic Frisby](https://en.wikipedia.org/wiki/Dominic_Frisby) ([MoneyWeek](https://moneyweek.com/investments/alternative-finance/bitcoin-crypto/603213/decade-of-the-dao-decentralised-autonomous-organisation))
+- Thinking Out Loud #2: Decred charting spree by @PermabullNino ([substack.com](https://permabullnino.substack.com/p/thinking-out-loud-2-decred-charting))
 
 Videos:
 
-- news update May 12 by @Exitus https://www.youtube.com/watch?v=S_asvjm4lFI
-- Talking Decred with Jake Yocom-Piatt https://www.youtube.com/watch?v=ZCfIM8IHurU { "irk some" quote! }
+- Finite coin supply - Decred Fundamentals by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=pRIEiCvBYPE))
+- Why is governance important - Decred Fundamentals by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=hrL4sS8HuXg))
+- Decred News Update - $150M stakeholder-driven DAO now live, DCRDEX coming to wallet, v1.6.2 & more by @Exitus ([youtube](https://www.youtube.com/watch?v=S_asvjm4lFI))
+- Why this will be the decade of the DAO - Big Tech on steroids by Dominic Frisby ([youtube](https://www.youtube.com/watch?v=dQLN-DNnVKU))
+- Decred 2021: DCR coin (Decred explained) by Layah Heilpern of Exodus ([youtube](https://www.youtube.com/watch?v=Kkb4BWmth7k))
+- Decred Price Analysis - 26th May 2021 by Josh Olszewicz of Brave New Coin ([youtube](https://www.youtube.com/watch?v=LUg_DXUHdmg)) { keep? }
+- The games are rigged - the revolution will not be centralized by @karamble ([twitter](https://twitter.com/karamblez/status/1398087058892148740))
+- Talking Decred with Jake Yocom-Piatt by Dominic Frisby ([youtube](https://www.youtube.com/watch?v=ZCfIM8IHurU))
 
-Audio:
-
-- {}
+> { "irk some" quote! }
 
 Art/fun:
 
@@ -411,6 +408,7 @@ Art/fun:
   - freedom eagle https://twitter.com/jz_bz/status/1392177374008053760
   - levels of voter enlightenment https://twitter.com/jz_bz/status/1395560884433473537
   - shower thoughts https://twitter.com/jz_bz/status/1396211915098136578
+- CoinDesk sending mixed signals on their stance towards Stakey https://twitter.com/CoinDesk/status/1395432897834848256
 
 Translations:
 
@@ -418,8 +416,8 @@ Translations:
 
 Other non-English content:
 
-- https://www.criptonoticias.com/comunidad/protocolo-decred-esta-5-dias-descentralizar-tesoreria/
-- is this a new podcast series? https://twitter.com/wanbihou/status/1383625001098649602
+- Decred's new Treasury covered by [CriptoNoticias](https://www.criptonoticias.com/comunidad/protocolo-decred-esta-5-dias-descentralizar-tesoreria/)
+- looks like @Dominic secretly runs a new Decred podcast in Chinese with 3 episodes already out: [first](https://twitter.com/wanbihou/status/1383625001098649602) with an anon hardware engineer about some community events, [second](https://twitter.com/wanbihou/status/1388412787076984832) on governance with decreder, and [third](https://twitter.com/wanbihou/status/1393825045902807041) with Mable Jiang of 51% Podcast (where @Dominic was a [guest](https://podcasts.apple.com/cn/podcast/51-with-mable-jiang-presented-by-multicoin-capital/id1540917284?l=en&i=1000515571194) recently)
 
 { I think Lego Stakey pic is due }
 
@@ -445,6 +443,10 @@ Selected Twitter discussions:
 In May DCR was trading between USD 90.4-229.4 / BTC 0.0027-0.0047. The average daily rate was $173.47.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
+
+@PermabullNino posted a ["charting spree"](https://permabullnino.substack.com/p/thinking-out-loud-2-decred-charting) with lots of metrics unique to Decred and succint commentary. USD 40 and BTC 0.004 seem to be important levels for many miners and stakers.
+
+@PermabullNino's non-Decred series ["Permabullish Banter"](https://permabullnino.substack.com/) [reports](https://permabullnino.substack.com/p/pb-banter-5-7-2021) that the stablecoin printer is in full "brr" mode, and some [insights](https://permabullnino.substack.com/p/pb-banter-5-25-2021) on USDC.
 
 checkonchain.com new metrics https://twitter.com/_Checkmatey_/status/1392266957823508486
 
