--- a/journal/202105.md
+++ b/journal/202105.md
@@ -7,7 +7,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 Highlights for May: {
 
 - new treasury activated, receiving block rewards, tested
-- 1.6.3 release
+- 1.6.3 patch release
 - dex 0.2
 
 }
@@ -28,17 +28,15 @@ Contents: { sync }
 
 ## v1.6.3 Patch Release
 
-{ key highlights for dcrwallet, decrediton, and dcrdex }
+Latest release of our flagship GUI wallet Decrediton fixes issues with VSP staking, makes the wallet "cooler" with granular unlocking of accounts, and adds experimental integration of the new [DCRDEX release](#dcrdex). Command-line dcrwallet is updated as well with VSP staking fixes and improvements.
 
-https://github.com/decred/decred-binaries/releases/tag/v1.6.3
+Decrediton users please be aware:
 
-{ see if any interesting changes were not mentioned in 1.6.3 rel notes }
+- experimental DCRDEX tab is only shown in full mode and is hidden in SPV mode
+- you need to run Bitcoin Core and have it fully synced to use DCRDEX tab
+- Windows download was updated to fix default Bitcoin directory [bug](https://github.com/decred/decrediton/pull/3469), if you downloaded the installer before May 25 please download again and reinstall
 
-{ windows users installed before May 25 please download and install again because the bin was replaced }
-
-{ dex confusion points: non spv and btc full node }
-
-{ verify bins }
+See the full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.3). As always, respect the signature [verification](https://docs.decred.org/advanced/verifying-binaries/) ritual to ensure you run unmodified binaries.
 
 ## New Treasury Activated
 
