Markets DEX volumes

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -450,6 +450,8 @@ checkonchain.com new metrics https://twitter.com/_Checkmatey_/status/13922669578
 
 { dcrdex updates, esp. volume }
 
+[DCRDEX](https://dex.decred.org/) has traded 383K DCR and 1.4K BTC in May, averaging to 12K DCR and 46 BTC daily trading volume.
+
 ## Relevant External
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
@@ -506,6 +508,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, dnldd, jholdstock, lukebp, oshorefueled
+- reviews and feedback: chappjc, davecgh, dnldd, jholdstock, lukebp, oshorefueled
 - title image: {}
 - funding: Decred stakeholders
