--- a/journal/202105.md
+++ b/journal/202105.md
@@ -40,17 +40,28 @@ See the full release notes and downloads [here](https://github.com/decred/decred
 
 ## New Treasury Activated
 
-{ what it means, what works, whats next }
+On May 8 the new consensus rules have activated. Starting from block [552,448](https://explorer.dcrdata.org/block/00000000000000001c6fc262b2673d94827f87daa329b0bdeb7866562ef919cf), 10% of the block rewards are flowing into the new [Treasury account](https://explorer.dcrdata.org/treasury) and are no longer flowing to the [legacy address](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx).
 
-{ put this in Gov or have a separate ANN section? }
+The key difference is that the new Treasury account is controlled by Decred stakeholders. Spending from the legacy address required only a signature by the private key controlled by Decred Holdings Group LLC ("DHG"), a conventional corporate entity created to bootstrap Decred. Spending from the new account is only possible after a successful vote approving a special "treasury spend" transaction ("tspend").
 
-{ test tspend done }
+A sophisticated voting process to support it was specified in [Decred Change Proposal 6](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) and implemented in software release v1.6. In a very simplified way, the key steps are:
 
-{ prepare for real tspends! }
+- Politeia admins create a tspend transaction conforming to certain requirements (not spending too much money, with not too long expiration time, signed by one of the two keys allowed by the consensus, etc)
+- the transaction is published to the mempool and voting wallets start voting on it
+- the vote runs for up to 12 days but can "short-circuit" as soon as after ~7 days if the outcome becomes unchangeable by any remaining votes
+- the transaction is included in the block and the contractors are paid
 
-{ clarify it is for solo voters only for now }
+Quickly after the new consensus activated, the new system was successfully tested on mainnet. Real tspends will start getting published soon and this will become a monthly process.
 
-https://twitter.com/matheusd_tech/status/1390981711736053760
+As of software release v1.6.3, tspend voting is only supported for "solo voters" who run voting wallets 24/7 (~77% of all stakeholders as of Jun 1). Work is [underway](https://github.com/decred/decrediton/issues/3184) to enable this for VSP users, covering the remaining ~23%.
+
+Solo voters are advised to prepare for the upcoming tspend votes by configuring their voting wallets with the following command:
+
+    dcrctl --wallet settreasurypolicy "03f6e7041f1cf51ee10e0a01cd2b0385ce3cd9debaabb2296f7e9dee9329da946c" "yes or no"
+
+This command expresses your trust to the current Treasury management and sets how your wallet votes for tspends signed by its key `03f6e704...`. You can verify this key in the [DCP-0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) or in the [source code](https://github.com/decred/dcrd/blob/master/chaincfg/mainnetparams.go#L389). The process is semi-automated with a one-time setup of the trust, but it is possible to vote on individual tspend transactions when more granular control is needed.
+
+Congratulations to all stakeholders with this milestone and thanks to all [contributors](https://twitter.com/matheusd_tech/status/1390981711736053760) making it a reality!
 
 ## Development
 
