--- a/journal/202105.md
+++ b/journal/202105.md
@@ -44,22 +44,25 @@ On May 8 the new consensus rules have activated. Starting from block [552,448](h
 
 The key difference is that the new Treasury account is controlled by Decred stakeholders. Spending from the legacy address required only a signature by the private key controlled by Decred Holdings Group LLC ("DHG"), a conventional corporate entity created to bootstrap Decred. Spending from the new account is only possible after a successful vote approving a special "treasury spend" transaction ("tspend").
 
-A sophisticated voting process to support it was specified in [Decred Change Proposal 6](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) and implemented in software release v1.6. In a very simplified way, the key steps are:
+A sophisticated voting process to support it was specified in [Decred Change Proposal 6](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) and implemented in software release v1.6. In a very simple way, the key steps are:
 
 - Politeia admins create a tspend transaction conforming to certain requirements (not spending too much money, with not too long expiration time, signed by one of the two keys allowed by the consensus, etc)
 - the transaction is published to the mempool and voting wallets start voting on it
 - the vote runs for up to 12 days but can "short-circuit" as soon as after ~7 days if the outcome becomes unchangeable by any remaining votes
-- the transaction is included in the block and the contractors are paid
+- up to ~17K tickets that are called to vote in this period may also cast tspend votes
+- if the vote passes, the transaction is included in the block and the contractors are paid
 
-Quickly after the new consensus activated, the new system was successfully tested on mainnet. Real tspends will start getting published soon and this will become a monthly process.
+The new Treasury system was successfully tested on mainnet quickly after the activation. On May 10 the stakeholders were [notified](https://twitter.com/decredproject/status/1391877816292151296) to configure their voting wallets. Then on May 12, a small test tspend [transaction](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1) was broadcast to the network. The nearest voting window was May 13-24, but the vote "short-circuited" after accumulating 6,755 Yes and 1 No vote over 9 days, with voter turnout of 39%. The tspend was mined in block [556,416](https://explorer.dcrdata.org/block/000000000000000000b8bed4b8511e3c5197d3eee6372db2ba199481e14d5376).
 
-As of software release v1.6.3, tspend voting is only supported for "solo voters" who run voting wallets 24/7 (~77% of all stakeholders as of Jun 1). Work is [underway](https://github.com/decred/decrediton/issues/3184) to enable this for VSP users, covering the remaining ~23%.
+{ verify "~17K" max votes and "39%" quorum math with the devs }
 
-Solo voters are advised to prepare for the upcoming tspend votes by configuring their voting wallets with the following command:
+As of software release v1.6.3, tspend voting is only supported for "solo voters" who run voting wallets 24/7 (~77% of all stakeholders as of Jun 1). Work is [underway](https://github.com/decred/decrediton/issues/3184) to enable this for VSP voters.
+
+Treasury spend voting will become a monthly process to pay people building Decred. Solo voters are [advised](https://twitter.com/decredproject/status/1391877959410233344) to prepare for upcoming tspend votes by configuring their voting wallets with the following command:
 
     dcrctl --wallet settreasurypolicy "03f6e7041f1cf51ee10e0a01cd2b0385ce3cd9debaabb2296f7e9dee9329da946c" "yes or no"
 
-This command expresses your trust to the current Treasury management and sets how your wallet votes for tspends signed by its key `03f6e704...`. You can verify this key in the [DCP-0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) or in the [source code](https://github.com/decred/dcrd/blob/master/chaincfg/mainnetparams.go#L389). The process is semi-automated with a one-time setup of the trust, but it is possible to vote on individual tspend transactions when more granular control is needed.
+This command expresses your trust to the current Treasury management and sets how your wallet votes for tspends signed by its key `03f6e704...`. You can verify this key in the [DCP-0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) or in the [source code](https://github.com/decred/dcrd/blob/master/chaincfg/mainnetparams.go#L389). The voting is semi-automated with a one-time setup of the trust, but it is possible to vote on individual tspend transactions when more granular control is needed.
 
 Congratulations to all stakeholders with this milestone and thanks to all [contributors](https://twitter.com/matheusd_tech/status/1390981711736053760) making it a reality!
 
@@ -310,8 +313,6 @@ In May Decred Treasury received 11,342 DCR (2,564 to the [old address](https://e
 Treasury metrics https://twitter.com/_Checkmatey_/status/1392266971228430338
 
 May saw 1 proposal submitted and approved, the proposal for continued development of Politeia (detailed [last month](202104.md)) had 98.4% approval and turnout of 44%.
-
-Decred's new Treasury system was successfully tested on mainnet. On May 10 the stakeholders were [notified](https://twitter.com/decredproject/status/1391877816292151296) to configure trust for the Politeia key \#1 in their voting wallets. Then, on May 12, a small test TSPEND [transaction](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1) was broadcast to the network. The nearest voting window was May 13-24 (12 days), but after having accumulated 6,755 Yes and 1 No vote over 9 days, the vote "short-circuited" and the tx was mined on May 22 in block [556,416](https://explorer.dcrdata.org/block/000000000000000000b8bed4b8511e3c5197d3eee6372db2ba199481e14d5376). This process is specified in [Decred Change Proposal 0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki).
 
 ## Network
 
