--- a/journal/202105.md
+++ b/journal/202105.md
@@ -433,20 +433,25 @@ Other non-English content:
 
 ## Discussions
 
-Comm systems news:
+Selected Reddit threads:
 
-- {}
-
-{ selected discussed topics, as bullet list or one paragraph per topic }
-
-Selected Reddit posts:
-
-- CAKE! https://www.reddit.com/r/decred/comments/n7l6ca/my_gf_made_this_deliciously_looking_cake_full_of/
+- Chia's [Proof of Space and Time](https://www.reddit.com/r/decred/comments/n2sdwq/thoughts_on_alternatives_to_proof_of_work/) (PoST) as a replacement of PoW
+- My GF made this deliciously looking [cake](https://www.reddit.com/r/decred/comments/n7l6ca/my_gf_made_this_deliciously_looking_cake_full_of/) full of Decred
+- Decred: a [moonshot](https://www.reddit.com/r/decred/comments/ncnmca/decred_a_moonshot_and_the_continuity_of_proof_of/), and the continuity of proof of work consensus
+- Do we [still need](https://www.reddit.com/r/decred/comments/njdrw6/do_we_still_need_centralized_exchanges/) centralized exchanges?
+- Why Decred is worth a [non-zero percentage](https://www.reddit.com/r/decred/comments/nors4z/why_decred_is_worth_a_nonzero_percentage_of/) of Bitcoin's market cap
 
 Selected Twitter discussions:
 
-- https://twitter.com/lukebp_/status/1388987670832074758
-- a long debate between @lukebp and @BuckPerley on formal vs informal governance https://twitter.com/lukebp_/status/1391747751105507331
+- a long [debate](https://twitter.com/lukebp_/status/1388987670832074758) between @lukebp and @BuckPerley on formal vs informal governance
+
+> The Decred DAO has achieved a new milestone for the entire crypto space: A Digital Sovereign Wealth Fund.
+> 
+> The Decred network is the closest thing to a Digital Nation state.
+> 
+> A Layer 1 DAO with its own treasury, its own exchange, its own currency, and its own wallet. ([@ammarooni](https://twitter.com/Ammarooni/status/1390869248910794753))
+
+{ auto cake pic(s) }
 
 ## Markets
 
@@ -460,7 +465,11 @@ In May DCR was trading between USD 90.4-229.4 / BTC 0.0027-0.0047. The average d
 
 checkonchain.com new metrics https://twitter.com/_Checkmatey_/status/1392266957823508486
 
+https://www.reddit.com/r/decred/comments/nakdpc/new_decred_onchain_metric_charts_live/
+
 { dcrdex updates, esp. volume }
+
+https://twitter.com/_Checkmatey_/status/1391743198242885634
 
 [DCRDEX](https://dex.decred.org/) has traded 383K DCR and 1.4K BTC in May, averaging to 12K DCR and 46 BTC daily trading volume.
 
