--- a/journal/202105.md
+++ b/journal/202105.md
@@ -465,27 +465,15 @@ In May DCR was trading between USD 90.4-229.4 / BTC 0.0027-0.0047. The average d
 
 ## Relevant External
 
-{ cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
-
 [Signalling](https://taproot.watch/) for Taproot activation on Bitcoin has hit a level exceeding 90% (as of early Jun at ~97%) and is set to be locked in some time in June when the current signalling window ends.
-
-Taproot activation saga
-
-- useful collection of Apr tweets https://twitter.com/_Checkmatey_/status/1382914885932044298
-- https://www.reddit.com/r/Bitcoin/comments/mr792g/luke_dashjr_on_twitter_community_came_to/
-- https://twitter.com/GrassFedBitcoin/status/1382892157288128514
-- https://twitter.com/WuBlockchain/status/1391421362590437380
-- https://taproot.watch/
-
-{ governance, funding, chain forks, community splits }
 
 Iran's Central Bank has [reportedly](https://www.coindesk.com/iran-central-bank-ban-trading-crypto-mined-abroad) banned trading of cryptocurrency which is "mined abroad", in an effort to stop capital flight. Iranian businesses are still permitted to obtain cryptocurrency from registered Iranian miners, for use in international payments.
 
-Bitcoin mining pool Marathon Mining has [mined](https://www.coindesk.com/marathon-miners-censor-bitcoin-transactions-ofac-compliant) a block which it describes as “fully compliant with U.S. regulations”, having censored transactions from entities it believes are sanctioned by the US Department of Treasury or have been involved in dark web activity. Despite their efforts some darknet market transactions made it into this block which was intended as a milestone for Bitcoin censorship.
+Bitcoin mining pool Marathon Mining has [mined](https://www.coindesk.com/marathon-miners-censor-bitcoin-transactions-ofac-compliant) a block which it describes as "fully compliant with U.S. regulations", having censored transactions from entities it believes are sanctioned by the US Department of Treasury or have been involved in dark web activity. Despite their efforts some darknet market transactions made it into this block which was intended as a milestone for Bitcoin censorship.
 
 After Elon Musk criticized Bitcoin's environmental characteristics and Tesla [stopped](https://twitter.com/elonmusk/status/1392602041025843203) accepting it as payment, he joined with Michael Saylor and others to [promote](https://www.forbes.com/sites/ninabambysheva/2021/05/24/elon-musk-and-michael-saylor-lead-effort-by-bitcoin-miners-to-address-environmental-concerns/) a new "Bitcoin Mining Council to promote energy usage transparency and accelerate sustainability initiatives worldwide".
 
-Ark's Cathie Wood also [remarked](https://www.coindesk.com/ark-cathie-wood-crash-esg-movement) at Consensus that ESG (Environmental Social and Governance) concerns with Bitcoin meant “A lot of institutional buying went on pause”, crediting Elon Musk with a role in this movement.
+Ark's Cathie Wood also [remarked](https://www.coindesk.com/ark-cathie-wood-crash-esg-movement) at Consensus that ESG (Environmental Social and Governance) concerns with Bitcoin meant "A lot of institutional buying went on pause", crediting Elon Musk with a role in this movement.
 
 The PoolTogether DAO, associated with the Pool Together lottery and controlling over 50% of all POOL tokens, has [voted](https://snapshot.org/#/poolpool.pooltogether.eth/proposal/QmfDcwyhMyhiTmszt8EX1a2vGfJzAN5TcXGMUwm7W7G7rq) to [diversify](https://gov.pooltogether.com/t/ptip-11-treasury-diversification/963) the holdings by selling 5.38% of all POOL tokens, currently controlled by the DAO, to a selection of VCs for the agreed sum of 7 million USDC. The POOL tokens bought by the VCs will have a lock-up period of 1 year, vesting over a 1 year period following that. 
 
@@ -496,17 +484,6 @@ May's big Ethereum flash loan fail victim was xToken, where an attacker [exploit
 Binance Smart Chain is now providing [competition](https://www.crowdfundinsider.com/2021/05/175611-defi-hack-analysis-project-pancakebunny-attacked-via-major-200-million-flash-loan-vulnerability/) for Ethereum in the DeFi dumpster fire stakes, after BUNNY tokens were hit for a notional $200 million in misprinted tokens following an economic exploit with, you guessed it, flash loans.
 
 Coinbase is [expanding](https://decrypt.co/72109/coinbase-says-its-a-media-company-really) its remit to also become a media company, going direct to their audience with "fact check" type content that is approved by its marketing department.
-
-{ DEX }
-
-{ relevant exchanges and websites }
-
-{ other: regulations, privacy, security, fun }
-
-EU anti-encryption laws
-
-- https://mailbox.org/en/post/it-companies-warn-eu-plans-to-ban-encryption
-- please find what exactly is being restricted / came into effect recently {rr: this doesn't appear to be a new story, when I search for it most of the stories in bigger outlets date to late 2020. Here is one that looks like a good report (with cake): https://techcrunch.com/2020/12/14/eu-council-wants-secure-encryption-and-lawful-data-access/ it seems like something more anti-encryption may be coming in 2021, but I don't see anything fresh and the mailbox.org article is just linking to this same EU document from 2020}
 
 That's all for May. Submit your stories [here](https://github.com/xaur/decred-news/labels/next%20release) or simply share your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#feedback). We're always looking for [contributors](https://github.com/xaur/decred-news/blob/docs/contributing.md) to improve DJ!
 
