--- a/journal/202105.md
+++ b/journal/202105.md
@@ -485,7 +485,7 @@ Binance Smart Chain is now providing [competition](https://www.crowdfundinsider.
 
 Coinbase is [expanding](https://decrypt.co/72109/coinbase-says-its-a-media-company-really) its remit to also become a media company, going direct to their audience with "fact check" type content that is approved by its marketing department.
 
-That's all for May. Submit your stories [here](https://github.com/xaur/decred-news/labels/next%20release) or simply share your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#feedback). We're always looking for [contributors](https://github.com/xaur/decred-news/blob/docs/contributing.md) to improve DJ!
+That's all for May. Share your stories for the next issue in our declassified [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat.
 
 ## About
 
