--- a/journal/202105.md
+++ b/journal/202105.md
@@ -392,19 +392,13 @@ Videos:
 - Decred 2021: DCR coin (Decred explained) by Layah Heilpern of Exodus ([youtube](https://www.youtube.com/watch?v=Kkb4BWmth7k))
 - Decred Price Analysis - 26th May 2021 by Josh Olszewicz of Brave New Coin ([youtube](https://www.youtube.com/watch?v=LUg_DXUHdmg)) { keep? }
 - The games are rigged - the revolution will not be centralized by @karamble ([twitter](https://twitter.com/karamblez/status/1398087058892148740))
-- Talking Decred with Jake Yocom-Piatt by Dominic Frisby ([youtube](https://www.youtube.com/watch?v=ZCfIM8IHurU))
-
-> { "irk some" quote! }
+- Talking Decred with Jake Yocom-Piatt by Dominic Frisby ([youtube](https://www.youtube.com/watch?v=ZCfIM8IHurU)) - @jy-p hinted at upgrading the mixing tech to post-quantum crypto
 
 Art/fun:
 
-- Lego Stakey! https://twitter.com/Talha_Habib/status/1398268623572111362
-- @jz has been busy with the [#RealDecredMemes](https://twitter.com/hashtag/RealDecredMemes) hashtag:
-  - DCR marrow chart/menu https://twitter.com/jz_bz/status/1391442849808408580
-  - freedom eagle https://twitter.com/jz_bz/status/1392177374008053760
-  - levels of voter enlightenment https://twitter.com/jz_bz/status/1395560884433473537
-  - shower thoughts https://twitter.com/jz_bz/status/1396211915098136578
-- CoinDesk sending mixed signals on their stance towards Stakey https://twitter.com/CoinDesk/status/1395432897834848256
+- [Lego Stakey](https://twitter.com/Talha_Habib/status/1398268623572111362) made by young hodlers
+- @jz has been busy with the [#RealDecredMemes](https://twitter.com/hashtag/RealDecredMemes) hashtag: DCR marrow [chart/menu](https://twitter.com/jz_bz/status/1391442849808408580), [freedom eagle](https://twitter.com/jz_bz/status/1392177374008053760), levels of voter [enlightenment](https://twitter.com/jz_bz/status/1395560884433473537), [shower thoughts](https://twitter.com/jz_bz/status/1396211915098136578)
+- CoinDesk sending [mixed signals](https://twitter.com/CoinDesk/status/1395432897834848256) on their sympathy for Stakey
 
 Translations:
 
