--- a/journal/202105.md
+++ b/journal/202105.md
@@ -12,15 +12,16 @@ Highlights for May: {
 
 }
 
-Contents: { sync }
+Contents:
 
+- [v1.6.3 Patch Release](#v163-patch-release)
+- [New Treasury Activated](#new-treasury-activated)
 - [Development](#development)
 - [People](#people)
 - [Governance](#governance)
 - [Network](#network)
 - [Ecosystem](#ecosystem)
 - [Outreach](#outreach)
-- [Events](#events)
 - [Media](#media)
 - [Discussions](#discussions)
 - [Markets](#markets)
@@ -32,9 +33,9 @@ Latest release of our flagship GUI wallet Decrediton fixes issues with VSP staki
 
 Decrediton users please be aware:
 
-- experimental DCRDEX tab is only shown in full mode and is hidden in SPV mode
-- you need to run Bitcoin Core and have it fully synced to use DCRDEX tab
-- Windows download was updated to fix default Bitcoin directory [bug](https://github.com/decred/decrediton/pull/3469), if you downloaded the installer before May 25 please download again and reinstall
+- the DEX tab is only shown in full mode and is hidden in SPV mode
+- you need to run Bitcoin Core and have it fully synced to use the DEX tab
+- Windows download was updated to fix default Bitcoin directory [bug](https://github.com/decred/decrediton/pull/3469), if you got the installer before May 25 please download again and reinstall
 
 See the full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.3). As always, respect the signature [verification](https://docs.decred.org/advanced/verifying-binaries/) ritual to ensure you run unmodified binaries.
 
@@ -42,7 +43,7 @@ See the full release notes and downloads [here](https://github.com/decred/decred
 
 On May 8 the new consensus rules have been activated. Starting with block [552,448](https://explorer.dcrdata.org/block/00000000000000001c6fc262b2673d94827f87daa329b0bdeb7866562ef919cf), 10% of the block rewards are flowing to the new [Treasury account](https://explorer.dcrdata.org/treasury) and are no longer flowing to the [legacy address](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx).
 
-The key difference is that the new Treasury account is controlled by Decred stakeholders. Spending from the legacy address only required a transaction signed by Decred Holdings Group LLC ("DHG"), a conventional corporate entity created to bootstrap Decred. Spending from the new account is only possible after a successful vote approving a special "treasury spend" transaction ("tspend").
+The key difference is that the new Treasury account is controlled by Decred stakeholders. Spending from the legacy address only required a transaction signed by Decred Holdings Group LLC ("DHG"), a conventional corporate entity created to bootstrap Decred. Spending from the new account is only possible if stakeholders vote to approve a special "treasury spend" transaction ("tspend").
 
 A sophisticated voting process to support it was specified in [Decred Change Proposal 6](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) and implemented in software release v1.6. In a very simple way, the key steps are:
 
@@ -88,7 +89,7 @@ Merged in master and v1.6.3 release:
 
 - improved heuristic for creating additional [split transactions](https://github.com/decred/dcrwallet/pull/2034) to fix more insufficient balance errors when buying tickets
 - fixed [input selection](https://github.com/decred/dcrwallet/pull/2035) when paying VSP fees, resolving two bugs: one where the intended inputs were not being used and could remain locked, and another where VSP fee could be paid out of the wrong account, possibly degrading the privacy of mixing wallets
-- ensure intended wallet [accounts](https://github.com/decred/dcrwallet/pull/2037) are used for paying VSP fee and receiving change when syncing failed VSP tickets { what is a "failed VSP ticket"? }
+- ensure intended wallet [accounts](https://github.com/decred/dcrwallet/pull/2037) are used for paying VSP fee and receiving change when syncing failed VSP tickets
 - [multiple](https://github.com/decred/dcrwallet/pull/2045) [fixes](https://github.com/decred/dcrwallet/pull/2046) for [tracking](https://github.com/decred/dcrwallet/pull/2048) VSP-managed tickets regarding fee payment scheduling, error handling, revocations, and expired fee transactions
 - ensure there are [no duplicate](https://github.com/decred/dcrwallet/pull/2042) fee payments and that all are tracked by the VSP client
 - perform a graceful shutdown when the [SIGHUP](https://github.com/decred/dcrwallet/pull/2039) signal is received
@@ -175,7 +176,7 @@ Progress towards v1.1.0 can now be tracked on the [Milestones](https://github.co
 - handle `SIGTERM` and `SIGHUP` shutdown [signals](https://github.com/decred/dcrpool/pull/327)
 - fixed chain notifications getting [blocked](https://github.com/decred/dcrpool/pull/324) by payment processing and added a workaround for dcrwallet's [reorg handling](https://github.com/decred/dcrwallet/issues/1740) bug
 
-Third release [candidate](https://github.com/decred/dcrpool/releases/tag/v1.2.0-rc3) for v1.2.0 fixed issues discovered since RC2, but coinbase confirmation failures remain unresolved. The release is postponed till further notice while the team is exploring solutions.
+Third v1.2.0 release [candidate](https://github.com/decred/dcrpool/releases/tag/v1.2.0-rc3) fixed issues discovered since RC2, but coinbase confirmation failures remain unresolved. The release is postponed till further notice while the team is exploring solutions.
 
 <a id="dcrdex" />
 
@@ -204,9 +205,9 @@ A lot of exciting work towards the [0.3 milestone](https://github.com/decred/dcr
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
 - disallow sending from [unmixed](https://github.com/planetdecred/dcrandroid/pull/541) accounts
-- added password input [delays](https://github.com/planetdecred/dcrandroid/pull/542) to resist brute force attacks
+- added password input [delays](https://github.com/planetdecred/dcrandroid/pull/542) to resist brute-force attacks
 - show [staking](https://github.com/planetdecred/dcrandroid/pull/543)-related transactions on the Overview page
-- updated [dependencies](https://github.com/planetdecred/dcrandroid/pull/546) and replaced usages of CoinShuffle++ with StakeShuffle
+- updated [dependencies](https://github.com/planetdecred/dcrandroid/pull/546) and replaced usages of "CoinShuffle++" with "StakeShuffle"
 - keep the [display on](https://github.com/planetdecred/dcrandroid/pull/553) until the mixing is completed or canceled
 - show rich text [formatting](https://github.com/planetdecred/dcrandroid/pull/557) for Politeia proposals (without using WebView)
 - updated Chinese and French translations
@@ -224,8 +225,8 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) shared li
 
 - implemented [Privacy mode](https://github.com/planetdecred/dcrios/pull/727) with guided setup of the mixer
 - show [USD equivalent](https://github.com/planetdecred/dcrios/pull/746) of wallet's DCR balance on the Overview page
-- added password input [delays](https://github.com/planetdecred/dcrios/pull/749) to resist brute force attacks
-- on the Overview page, show [which wallet](https://github.com/planetdecred/dcrios/pull/776) transactions belong to when there is more than one wallet
+- added password input [delays](https://github.com/planetdecred/dcrios/pull/749) to resist brute-force attacks
+- when there is more than one wallet on the Overview page, show [which wallet](https://github.com/planetdecred/dcrios/pull/776) the transactions belong to
 - show more specific [notifications](https://github.com/planetdecred/dcrios/pull/766) for staking transactions (ticket voted or revoked)
 - show rich text [formatting](https://github.com/planetdecred/dcrios/pull/773) for Politeia proposals (without using UIWebView)
 - fixed incorrect list of [accounts](https://github.com/planetdecred/dcrios/pull/765) to send from
@@ -284,10 +285,6 @@ Other:
 
 Welcome to new first time contributors with code merged to master: @LasTshaMAN ([politeia](https://github.com/decred/politeia/commits?author=LasTshaMAN))!
 
-{ updates from existing contractors }
-
-{ interviews about people }
-
 Community stats as of Jun 1:
 
 - [Twitter](https://twitter.com/decredproject) followers: 45,724 (+1,333)
@@ -298,11 +295,9 @@ Community stats as of Jun 1:
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,540 (+40), views: 186K (+4K)
 - GitHub [dcrd](https://github.com/decred/dcrd) stars: 598 (+7), forks: 255 (+1)
 
-May's recap of interesting social media dynamics can be found [here](https://decredcommunity.github.io/social-media-stats/posts/20210604.1), now in a tabular format for easier reading. Feedback is appreciated to understand how valuable these reports are.
+May's recap of interesting social media dynamics [is out](https://decredcommunity.github.io/social-media-stats/posts/20210604.1), now with tables for easier reading. Feedback is appreciated to understand how valuable these reports are.
 
 All-time community growth charts have been tweaked, updated, and moved to a new location [here](https://decredcommunity.github.io/social-media-stats/docs/charts).
-
-{ add image with a mini chart of SM metrics }
 
 ## Governance
 
