--- a/journal/202105.md
+++ b/journal/202105.md
@@ -303,9 +303,9 @@ All-time community growth charts have been tweaked, updated, and moved to a new 
 
 In May Decred Treasury received 11,342 DCR (2,564 to the [old address](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx), and 8,778 to the [new system](https://explorer.dcrdata.org/treasury)) worth $1.97M at May's average rate of $173.47. No DCR was spent in May. On Jun 2, 698 DCR was spent from the legacy address for April invoices, worth $121K at May's rate, or $139K at April's billing rate of $198.60. As of Jun 3, combined Treasury balance is 683,438 DCR (107 million USD at $156).
 
-Treasury metrics https://twitter.com/_Checkmatey_/status/1392266971228430338
-
 May saw 1 proposal submitted and approved, the proposal for continued development of Politeia (detailed [last month](202104.md)) had 98.4% approval and turnout of 44%.
+
+Treasury charts have been [added](https://twitter.com/_Checkmatey_/status/1392266971228430338) on [checkonchain.com](http://checkonchain.com/) to assist with governance decisions around expenses.
 
 ## Network
 
@@ -321,9 +321,9 @@ Distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/dec
 
 The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) was 7.39-7.62 million DCR, meaning that 57.2-58.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=ko2vefoc-kpf16yhd&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-**VSP**: On Jun 1, 8.2K (+1.1K) live tickets were managed by vspd servers and 1.1K (-1.1K) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 22.5% of the ticket pool. The 4 recently delisted but still active legacy VSPs managed 61 live tickets.
+**VSP**: On Jun 1, 8.2K (+1.1K) live tickets were managed by vspd servers and 1.1K (-1.1K) by the [still listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 22.5% of the ticket pool. The recently delisted but still active legacy VSPs managed 61 live tickets.
 
-On May 14 it was [discovered](https://github.com/decred/dcrwebapi/issues/138) that 4 legacy VSPs have not upgraded to support the new consensus rules and got forked off the network on May 8, while holding ~350 tickets of their clients. The biggest ones [stakepool.eu](https://stakepool.eu/) and [stakey.com](https://stakey.com/) have eventually upgraded to continue serving their tickets, while [stakepool.dcrstats.com](https://stakepool.dcrstats.com) changed to maintenance mode and stopped reporting the stats. The status of its 77 live tickets is unknown as of Jun 5.
+On May 14 it was [discovered](https://github.com/decred/dcrwebapi/issues/138) that 4 legacy VSPs have not upgraded to the new consensus rules and got forked off the network on May 8, while holding ~350 tickets of their clients. All but one have eventually upgraded to continue serving their tickets, while [stakepool.dcrstats.com](https://stakepool.dcrstats.com) changed to maintenance mode and stopped reporting the stats. The status of its 77 live tickets is unknown as of Jun 8.
 
 **Nodes**: Throughout May there were around 215 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
@@ -331,19 +331,19 @@ Node versions as of Jun 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 
 ## Ecosystem
 
-Welcome the new [vspd](https://github.com/decred/vspd) instance [123.dcr.rocks](https://123.dcr.rocks/) from [@thefrankbraun](https://twitter.com/thefrankbraun). Service fee is 0.49% and voting wallets are [located](https://twitter.com/thefrankbraun/status/1389014142095437825) in 3 data centers on 2 continents. Since it was listed on May 1, the service has already voted 370+ tickets and manages ~570 live tickets as of Jun 5.
+Welcome the new [vspd](https://github.com/decred/vspd) instance [123.dcr.rocks](https://123.dcr.rocks/) from [@thefrankbraun](https://twitter.com/thefrankbraun). Service fee is 0.49% and voting wallets are [located](https://twitter.com/thefrankbraun/status/1389014142095437825) in 3 data centers on 2 continents. Since it was listed on May 1, the service has already voted ~430 tickets and manages ~650 live tickets as of Jun 8.
 
 Legacy VSP [dcrpool.dittrex.com](https://dcrpool.dittrex.com) was [removed](https://github.com/decred/dcrwebapi/pull/140) from the [listing](https://decred.org/vsp/) but is still online watching its last 1 live ticket. The service has voted 800+ tickets since [Nov 2018](https://github.com/decred/dcrwebapi/pull/48). The replacement vspd instance from Dittrex is up, [waiting](https://github.com/decred/dcrwebapi/pull/133) its first voted ticket to get added to the list.
 
 Not all exchanges handled Decred's 6th consensus upgrade smoothly:
 
 - Binance has upgraded in advance and was not affected by the fork when it happened
-- Bittrex got stuck at block [552,447](https://explorer.dcrdata.org/block/552447) - last block adhering to the old consensus rules. Their [status page](https://global.bittrex.com/Status) reported that DCR wallet is disabled and under "Wallet Maintenance", which changed to "Normal" on around May 13.
-- Poloniex [tweeted](https://twitter.com/PoloSupport/status/1390916088397852675) that their DCR wallet has been disabled for "maintenance" (~4 hours after the consensus upgrade), and [tweeted](https://twitter.com/PoloSupport/status/1395727656251973639) again on May 21 that it was re-enabled
+- Bittrex got stuck at block [552,447](https://explorer.dcrdata.org/block/552447) - last block adhering to the old consensus rules. Their [status page](https://global.bittrex.com/Status) reported that DCR wallet was disabled and under "Wallet Maintenance", which changed to "Normal" on around May 13.
+- Poloniex [tweeted](https://twitter.com/PoloSupport/status/1390916088397852675) that their DCR wallet was disabled for "maintenance" (~4 hours after the consensus upgrade), and [tweeted](https://twitter.com/PoloSupport/status/1395727656251973639) again on May 21 that it was re-enabled
 
-Since around May 17 Ledger Live users have been reporting issues with syncing and sending their DCR. Last update on Ledger's [incident page](https://status.ledger.com/incidents/j1sypv88pgs6) says the fix was being tested on May 20, but their Jun 3 [tweet](https://twitter.com/Ledger_Support/status/1400429510827388929) confirms the issue is still unresolved. As of Jun 5, the [status page](https://status.ledger.com/) reports an outage for DCR and a 78.3% uptime over the past 90 days.
+Since around May 17, Ledger Live users have been reporting issues with syncing and sending their DCR. Last update on Ledger's [incident page](https://status.ledger.com/incidents/j1sypv88pgs6) says the fix was being tested on May 20, but their Jun 3 [tweet](https://twitter.com/Ledger_Support/status/1400429510827388929) confirms the issue is still unresolved. As of Jun 8, the [status page](https://status.ledger.com/) reports an outage for DCR and a 75% uptime over the past 90 days.
 
-The following services have been [delisted](https://github.com/decred/dcrweb/pull/957) from [decred.org](https://decred.org/exchanges/):
+The following services have been [removed](https://github.com/decred/dcrweb/pull/957) from [decred.org](https://decred.org/exchanges/):
 
 - [instaex.io](https://instaex.io/) - website is down
 - [fexpro.net](https://fexpro.net/) - certificate errors
