--- a/journal/202105.md
+++ b/journal/202105.md
@@ -45,11 +45,11 @@ On May 8 the new consensus rules have been activated. Starting with block [552,4
 
 The key difference is that the new Treasury account is controlled by Decred stakeholders. Spending from the legacy address only required a transaction signed by Decred Holdings Group LLC ("DHG"), a conventional corporate entity created to bootstrap Decred. Spending from the new account is only possible if stakeholders vote to approve a special "treasury spend" transaction ("tspend").
 
-A sophisticated voting process to support it was specified in [Decred Change Proposal 6](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) and implemented in software release v1.6. In a very simple way, the key steps are:
+A sophisticated voting process to support it was specified in [Decred Change Proposal 6](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) and implemented in software release v1.6. In simple terms, the key steps are:
 
-- Politeia admins create a tspend transaction conforming to certain requirements (not spending too much money, with not too long expiration time, signed by one of the two keys allowed by the consensus, etc)
+- Politeia admins create a tspend transaction conforming to certain requirements (not spending too much money, with not too long expiration time, signed by one of the two keys allowed by consensus, etc)
 - the transaction is published to the mempool and voting wallets start voting on it
-- the vote runs for up to 12 days but can "short-circuit" as early as in ~7 days if the outcome becomes unchangeable by any remaining votes
+- the vote runs for up to 12 days but can "short-circuit" in as early as ~7 days if the outcome becomes unchangeable by any remaining votes
 - up to 17,280 tickets that are called to vote during this period may cast tspend votes (along with normal block approval and consensus upgrade votes)
 - if the vote passes, the transaction is included in a block (up to 1 day later) and the contractors are paid
 
@@ -57,7 +57,7 @@ The new Treasury system was successfully tested on mainnet quickly after the act
 
 As of software release v1.6.3, tspend voting is only supported for "solo voters" who run voting wallets 24/7 (~77% of all stakeholders as of Jun 1). Work is [underway](https://github.com/decred/decrediton/issues/3184) to enable this for VSP voters.
 
-Treasury spend voting will become an important monthly process to pay people building Decred. Solo voters are [advised](https://twitter.com/decredproject/status/1391877959410233344) to prepare for upcoming tspend votes by configuring their voting wallets with the following command:
+Treasury spend voting will become an important monthly process to pay the people building Decred. Solo voters are [advised](https://twitter.com/decredproject/status/1391877959410233344) to prepare for upcoming tspend votes by configuring their voting wallets with the following command:
 
     dcrctl --wallet settreasurypolicy "03f6e7041f1cf51ee10e0a01cd2b0385ce3cd9debaabb2296f7e9dee9329da946c" "yes or no"
 
