add intro bullets

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -6,9 +6,9 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 Highlights for May: {
 
-- new treasury activated, receiving block rewards, tested
-- 1.6.3 patch release
-- dex 0.2
+- The new Treasury system is actively receiving block rewards and has already been tested with the first of the new tspend transactions being approved and mined.
+- Version 1.6.3 of node and wallet software was released to patch some issues with VSP staking and add some of the latest features.
+- DCRDEX v0.2.0 was released, incorporating more than 3 months work, and an experimental DCRDEX integration has been added to Decrediton v1.6.3. 
 
 }
 
