--- a/journal/202105.md
+++ b/journal/202105.md
@@ -4,13 +4,11 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-Highlights for May: {
+Highlights for May:
 
 - The new Treasury system is actively receiving block rewards and has already been tested with the first of the new tspend transactions being approved and mined.
 - Version 1.6.3 of node and wallet software was released to patch some issues with VSP staking and add some of the latest features.
-- DCRDEX v0.2.0 was released, incorporating more than 3 months work, and an experimental DCRDEX integration has been added to Decrediton v1.6.3. 
-
-}
+- DCRDEX v0.2.0 was released, incorporating more than 3 months work, and an experimental DCRDEX integration has been added to Decrediton v1.6.3.
 
 Contents:
 
@@ -118,7 +116,7 @@ Merged in master and v1.6.3 release:
 Merged in master:
 
 - fixed handling of [zero](https://github.com/decred/decrediton/pull/3468) "Balance to Maintain" value
-- introduced [preload script](https://github.com/decred/decrediton/pull/3397) and converted some comms between the main and renderer processes to a more robust approach using `invoke/handle`. This is a first step towards isolating all Node-related calls so that Node integration can be turned off for the main UI code. 
+- introduced [preload script](https://github.com/decred/decrediton/pull/3397) and converted some comms between the main and renderer processes to a more robust approach using `invoke/handle`. This is a first step towards isolating all Node-related calls so that Node integration can be turned off for the main UI code.
 
 { add a pretty DEX integration UI shot, 768px wide if possible }
 
@@ -385,7 +383,7 @@ Videos:
 - Decred News Update - $150M stakeholder-driven DAO now live, DCRDEX coming to wallet, v1.6.2 & more by @Exitus ([youtube](https://www.youtube.com/watch?v=S_asvjm4lFI))
 - Why this will be the decade of the DAO - Big Tech on steroids by Dominic Frisby ([youtube](https://www.youtube.com/watch?v=dQLN-DNnVKU))
 - Decred 2021: DCR coin (Decred explained) by Layah Heilpern of Exodus ([youtube](https://www.youtube.com/watch?v=Kkb4BWmth7k))
-- Decred Price Analysis - 26th May 2021 by Josh Olszewicz of Brave New Coin ([youtube](https://www.youtube.com/watch?v=LUg_DXUHdmg)) { keep? }
+- Decred Price Analysis - 26th May 2021 by Josh Olszewicz of Brave New Coin ([youtube](https://www.youtube.com/watch?v=LUg_DXUHdmg))
 - The games are rigged - the revolution will not be centralized by @karamble ([twitter](https://twitter.com/karamblez/status/1398087058892148740))
 - Talking Decred with Jake Yocom-Piatt by Dominic Frisby ([youtube](https://www.youtube.com/watch?v=ZCfIM8IHurU)) - @jy-p hinted at upgrading the mixing tech with post-quantum crypto
 
@@ -436,7 +434,7 @@ In May DCR was trading between USD 90.4-229.4 / BTC 0.0027-0.0047. The average d
 
 @PermabullNino's non-Decred series ["Permabullish Banter"](https://permabullnino.substack.com/) [reports](https://permabullnino.substack.com/p/pb-banter-5-7-2021) that the stablecoin printer is in full "brr" mode, and some [insights](https://permabullnino.substack.com/p/pb-banter-5-25-2021) on USDC.
 
-@Checkmate has updated [checkonchain.com](https://checkonchain.com/) with new charts tracking [Decred Treasury](https://www.reddit.com/r/decred/comments/nakdpc/new_decred_onchain_metric_charts_live/) and DCRDEX trading [volume](https://nitter.snopyta.org/_Checkmatey_/status/1391743198242885634).
+@Checkmate has updated [checkonchain.com](https://checkonchain.com/) with new charts tracking [Decred Treasury](https://www.reddit.com/r/decred/comments/nakdpc/new_decred_onchain_metric_charts_live/) and DCRDEX trading [volume](https://twitter.com/_Checkmatey_/status/1391743198242885634).
 
 [DCRDEX](https://dex.decred.org/) has traded 383K DCR and 1.4K BTC in May, averaging to 12K DCR and 46 BTC daily trading volume.
 
@@ -452,7 +450,7 @@ After Elon Musk criticized Bitcoin's environmental characteristics and Tesla [st
 
 Ark's Cathie Wood also [remarked](https://www.coindesk.com/ark-cathie-wood-crash-esg-movement) at Consensus that ESG (Environmental Social and Governance) concerns with Bitcoin meant "A lot of institutional buying went on pause", crediting Elon Musk with a role in this movement.
 
-The PoolTogether DAO, associated with the Pool Together lottery and controlling over 50% of all POOL tokens, has [voted](https://snapshot.org/#/poolpool.pooltogether.eth/proposal/QmfDcwyhMyhiTmszt8EX1a2vGfJzAN5TcXGMUwm7W7G7rq) to [diversify](https://gov.pooltogether.com/t/ptip-11-treasury-diversification/963) the holdings by selling 5.38% of all POOL tokens, currently controlled by the DAO, to a selection of VCs for the agreed sum of 7 million USDC. The POOL tokens bought by the VCs will have a lock-up period of 1 year, vesting over a 1 year period following that. 
+The PoolTogether DAO, associated with the Pool Together lottery and controlling over 50% of all POOL tokens, has [voted](https://snapshot.org/#/poolpool.pooltogether.eth/proposal/QmfDcwyhMyhiTmszt8EX1a2vGfJzAN5TcXGMUwm7W7G7rq) to [diversify](https://gov.pooltogether.com/t/ptip-11-treasury-diversification/963) the holdings by selling 5.38% of all POOL tokens, currently controlled by the DAO, to a selection of VCs for the agreed sum of 7 million USDC. The POOL tokens bought by the VCs will have a lock-up period of 1 year, vesting over a 1 year period following that.
 
 This is part of an apparent recent [trend](https://www.coindesk.com/synthetix-baderdao-sushiswap-lido-dao-treasuries) for DAOs to diversify their holdings.
 
