add karamble and drop draft from title

--- a/journal/202105.md
+++ b/journal/202105.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – May 2021
+# Decred Journal – May 2021
 
 ![abstract art by @saender](../img/202105.1.github.png)
 
@@ -473,6 +473,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: chappjc, davecgh, dnldd, jholdstock, lukebp, matheusd, oshorefueled
+- reviews and feedback: chappjc, davecgh, dnldd, jholdstock, karamble, lukebp, matheusd, oshorefueled
 - title image: saender
 - funding: Decred stakeholders
