--- a/journal/202105.md
+++ b/journal/202105.md
@@ -39,7 +39,7 @@ See the full release notes and downloads [here](https://github.com/decred/decred
 
 ## New Treasury Activated
 
-On May 8 the new consensus rules have been activated. Starting with block [552,448](https://explorer.dcrdata.org/block/00000000000000001c6fc262b2673d94827f87daa329b0bdeb7866562ef919cf), 10% of the block rewards are flowing to the new [Treasury account](https://explorer.dcrdata.org/treasury) and are no longer flowing to the [legacy address](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx).
+The new consensus rules activated on May 8. Starting with block [552,448](https://explorer.dcrdata.org/block/00000000000000001c6fc262b2673d94827f87daa329b0bdeb7866562ef919cf), 10% of the block rewards are flowing to the new [Treasury account](https://explorer.dcrdata.org/treasury) and are no longer flowing to the [legacy address](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx).
 
 The key difference is that the new Treasury account is controlled by Decred stakeholders. Spending from the legacy address only required a transaction signed by Decred Holdings Group LLC ("DHG"), a conventional corporate entity created to bootstrap Decred. Spending from the new account is only possible if stakeholders vote to approve a special "treasury spend" transaction ("tspend").
 
