--- a/journal/202106.md
+++ b/journal/202106.md
@@ -6,6 +6,8 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { intro, major news of the month, don't put any links here
 
+- new consensus upgrade on the horizon
+- approved proposals
 - treasury consensus bug discovered
 - hashrate drop
 
@@ -32,13 +34,29 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 { hint: below add an overview of activity for each project. add any other project that warrants a paragraph. drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
 
+{ check if anything was merged on Jun 30 }
+
 <a id="dcrd" />
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-- {}
+The way standard scripts are handled has been reworked to address a number of long-standing issues.
 
-{ quote why soft forks are bad }
+For a quick background, "[scripts](https://devdocs.decred.org/developer-guides/transactions/txscript/overview/)" are small commands stored inside [transactions](https://devdocs.decred.org/developer-guides/transactions/transaction-format/) that consume "input" coins from past transactions and create new "output" coins with new conditions how they can be spent, which to us humans looks like "sending funds". "Standard scripts" is a subset of all scripts allowed by the consensus that covers most useful operations (sending, staking, multisig, etc) optimized for efficiency and network security. Mainnet nodes will normally [refuse](https://github.com/decred/dcrd/pull/2656#issuecomment-851105968) to accept and relay transactions containing non-standard scripts.
+
+The [reworked code](https://github.com/decred/dcrd/pull/2656) adds a new package called `stdscript` that supports different script versions (this was hard to support previously and is required for the next consensus upgrade), provides a more ergonomic API for developers (including multisig and atomic swap helpers) and improves separation between "standard" and "consensus" (a common point of confusion for new developers). Additionally, the policy of what scripts are considered "standard" has been further tightened to help ensure the typical scripts occupy less space on chain and further restrict cases that don't make sense.
+
+As usual, this large change comes in a series of easy-to-digest commits with informative descriptions, tests, benchmarks, examples, all finished with a thorough new [README](https://github.com/decred/dcrd/blob/master/internal/staging/stdscript/README.md).
+
+{ I couldn't resist writing it up, but have a second look if it's too much for stdscript }
+
+A number of other [changes](https://github.com/decred/dcrd/pulls?q=standardness+is%3Apr+merged%3A2021-06-01..2021-06-30+sort%3Aupdated-asc) have been focused on removing the usages of standardness code from consensus code since the latter must not change in case the policy of what is considered "standard" changes.
+
+A [proposal](https://proposals.decred.org/record/3a98861) for developing the next consensus change has been submitted and approved. This upgrade will practically forbid soft forks to simplify future consensus changes and [improve security](https://proposals.decred.org/record/3a98861/comments/8). Once it activates, full nodes will start rejecting transactions and scripts of newer versions they do not understand, instead of ignoring them and believing they still fully validate the chain.
+
+> Soft forks are primarily the outgrowth of less capable systems with technical shortcomings and the lack of formal governance processes necessary to uncontroversially deploy them ([@davecgh](https://proposals.decred.org/record/3a98861))
+
+Further departure from soft forks is possible thanks to Decred's drama-free process of coordinating hard forks and its highly engaged community.
 
 <a id="dcrwallet" />
 
