--- a/journal/202106.md
+++ b/journal/202106.md
@@ -135,13 +135,15 @@ Contractor Management System (CMS):
 
 **[vspd](https://github.com/decred/vspd)**
 
-- {}
-
-<a id="dcrstakepool" />
-
-**[dcrstakepool](https://github.com/decred/dcrstakepool)**
-
-- {}
+- added the [share](https://github.com/decred/vspd/pull/264) of VSP's live tickets, as well as its revoked percentage, to the homepage and `/vspinfo` response
+- allow admins to set a custom [message](https://github.com/decred/vspd/pull/269) that will be shown on the webpage and returned by the status API when the VSP is closed
+- improved [cache busting](https://github.com/decred/vspd/pull/270) (prevents users from seeing outdated resources)
+- compare [scripts](https://github.com/decred/vspd/pull/267) rather than addresses when verifying fee payments (this is more correct, more efficient and fixes one edge case)
+- [filtering](https://github.com/decred/vspd/pull/265) of database tickets made more than twice faster
+- ensure ticket [purchase height](https://github.com/decred/vspd/pull/277) is set for all tickets
+- improved [shutdown](https://github.com/decred/vspd/pull/271) handling
+- refactored [GUI cache](https://github.com/decred/vspd/pull/273) for better reuse
+- [UI tweaks](https://github.com/decred/vspd/pull/274)
 
 <a id="dcrpool" />
 
