--- a/journal/202106.md
+++ b/journal/202106.md
@@ -149,7 +149,11 @@ Contractor Management System (CMS):
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- {}
+v1.2.0 [is here](https://twitter.com/dnldd/status/1409819702654910465) bringing almost a full year of development since v1.1.0. See all fixes and improvements in the [release notes](https://github.com/decred/dcrpool/releases/tag/v1.2.0).
+
+Merged in master and v1.2.0 release:
+
+- reworked coinbase [confirmation](https://github.com/decred/dcrpool/pull/334) tracking to resolve remaining issues
 
 <a id="dcrlnd" />
 
