Dev mobile apps

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -169,21 +169,36 @@ Merged in master and v1.2.0 release:
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- {}
+- option to [send change](https://github.com/planetdecred/dcrandroid/pull/568) to unmixed account (to be mixed before use), and indicate to which account the change will go on the Send page
+- distinguish [mixes](https://github.com/planetdecred/dcrandroid/pull/565) with unique label and icon
+- updated [French](https://github.com/planetdecred/dcrandroid/pull/567) translation
+- bug fixes { count? }
 
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
+Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) (base library for Android/iOS apps and godcr):
+
+- added filters to find [mixed](https://github.com/planetdecred/dcrlibwallet/pull/195) or various [staking](https://github.com/planetdecred/dcrlibwallet/pull/201) transactions
+- added [statistics](https://github.com/planetdecred/dcrlibwallet/pull/201) for all transactions or staking activity
+- option to send [change](https://github.com/planetdecred/dcrlibwallet/pull/199) to unmixed account
+- fixed [insufficient](https://github.com/planetdecred/dcrlibwallet/pull/189) balance when paying vspd ticket fees
 
 <a id="dcrios" />
 
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
-- {}
+- option to [send change](https://github.com/planetdecred/dcrios/pull/807) to unmixed account (to be mixed before use), and indicate to which account the change will go on the Send page
+- prevent [sleep]https://github.com/planetdecred/dcrios/pull/798) while syncing, rescanning or mixing
+- more flexible [dropdown](https://github.com/planetdecred/dcrios/pull/738) menu on the wallets list
+- distinguish [mixes](https://github.com/planetdecred/dcrios/pull/801) with unique label and icon
+- UI tweaks
+- ~7 bug fixes
 
 <a id="godcr" />
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
 - {}
+
+{ call for testers? }
 
 <a id="dcrdata" />
 
