--- a/journal/202106.md
+++ b/journal/202106.md
@@ -256,7 +256,8 @@ Other:
 
 { hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
 
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ...
+Welcome to new first time contributors with code merged to master: @vibros68 ([politeiagui](https://github.com/decred/politeiagui/commits?author=vibros68)) and @x-walker-x ([politeiagui](https://github.com/decred/politeiagui/commits?author=x-walker-x)).
+
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
 
