add hashrate news

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -306,6 +306,8 @@ See Politeia Digest [issue 43](https://blockcommons.red/politeia-digest/issue043
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on July 1: Poolin 37%, F2Pool 27.8%, Antpool 8.5%, Luxor 5.3%, BTC.com 5.12%,  Huobipool 1%, UUPool 0.19%, Coinmine 0.11%.
 
+As you can see above had a large drop in hashrate due to miners shifting out of China due to a recent [ban](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere). This is especially visible in ASIC mined coins like Decred and [Bitcoin](https://twitter.com/krugermacro/status/1409484360651317250). 
+
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
