--- a/journal/202106.md
+++ b/journal/202106.md
@@ -196,9 +196,26 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) (base lib
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+User-facing:
 
-{ call for testers? }
+- implemented views: [Ticket activity](https://github.com/planetdecred/godcr/pull/439), [Statistics](https://github.com/planetdecred/godcr/pull/445), proposal [voting modal](https://github.com/planetdecred/godcr/pull/468)
+- added [start page](https://github.com/planetdecred/godcr/pull/465) that is shown while the wallets are loading
+- added explainer [tooltips](https://github.com/planetdecred/godcr/pull/448) for tickets
+- allow to go to [previous page](https://github.com/planetdecred/godcr/pull/491)
+- show [account](https://github.com/planetdecred/godcr/pull/467) names on inputs and outputs of the transaction
+- limit content [width](https://github.com/planetdecred/godcr/pull/444) when stretching the window
+- numerous bug fixes and UI tweaks
+
+Developer:
+
+- extracted reusable code for [pages](https://github.com/planetdecred/godcr/pull/459), [modals](https://github.com/planetdecred/godcr/pull/460), [notifications](https://github.com/planetdecred/godcr/pull/464), and [account selector](https://github.com/planetdecred/godcr/pull/484) (along with refactoring and cleanup)
+- refactored for better use of [dcrlibwallet](https://github.com/planetdecred/godcr/pull/475) library
+- removed global subpage buttons and create them [locally](https://github.com/planetdecred/godcr/pull/492) on each page (fixes pages interfering with each other)
+- implemented more [recommendations](https://paste.sr.ht/~eliasnaur/cea1d29d6a5f96668b5e166c2f39ef596974574f) from Elias Naur (creator of the Gio UI library)
+
+{ can add a pretty shot of some new UI made in June, how about the new [voting modal](https://github.com/planetdecred/godcr/pull/468) ? }
+
+{ add open call for testers? }
 
 <a id="dcrdata" />
 
